--- a/MixerControls/mixer-vue-cdk/app/sass/app.scss
+++ b/MixerControls/mixer-vue-cdk/app/sass/app.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'supersonic_rocketshipregular';
 
-  src: url('/fonts/supersonic_rocketship-webfont.woff2') format('woff2'),
-  url('/fonts/supersonic_rocketship-webfont.woff') format('woff');
+  src: url('../fonts/supersonic_rocketship-webfont.woff2') format('woff2'),
+  url('../fonts/supersonic_rocketship-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
